增加离屏canvas的例子

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <li>
             token_bucket中实现了令牌桶的算法
         </li>
+        <li>
+            <a href="offscreen_canvas/index.html">一个canvas使用离屏渲染缓存增加性能的例子</a>
+        </li>
     </ul>
 </body>
 
